[gd_scene load_steps=5 format=3 uid="uid://dlmxrv7dhtjfo"]

[ext_resource type="Script" uid="uid://ce010vry5km12" path="res://ui/upgrade-menu/upgrade_buttons/atk range/stat_atk_range.gd" id="1_rrvip"]
[ext_resource type="Texture2D" uid="uid://c4ejevqoai3wj" path="res://assets/PNG/Blue/Double/button_square_header_small_square_screws.png" id="2_yxsgj"]
[ext_resource type="LabelSettings" uid="uid://cahn7yy0ri0b8" path="res://texto_logro.tres" id="3_xsx5l"]
[ext_resource type="Theme" uid="uid://divwri80mossj" path="res://resources/button_modern_shop.tres" id="4_krpb8"]

[node name="stat_atk_range" type="BoxContainer"]
offset_right = 162.0
offset_bottom = 217.0
script = ExtResource("1_rrvip")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer"]
layout_mode = 2
texture = ExtResource("2_yxsgj")
patch_margin_left = 25
patch_margin_top = 25
patch_margin_right = 25
patch_margin_bottom = 25

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="stat_title" type="Label" parent="MarginContainer/HBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "stat title"
label_settings = ExtResource("3_xsx5l")
horizontal_alignment = 1

[node name="stat_level" type="Label" parent="MarginContainer/HBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "stat level"
label_settings = ExtResource("3_xsx5l")
horizontal_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="stat_value" type="Label" parent="MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "+2"
label_settings = ExtResource("3_xsx5l")
horizontal_alignment = 1

[node name="precio" type="Label" parent="MarginContainer/HBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "100$"
label_settings = ExtResource("3_xsx5l")
horizontal_alignment = 1

[node name="Button" type="Button" parent="MarginContainer/HBoxContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 45)
layout_mode = 2
theme = ExtResource("4_krpb8")
text = "Buy!"

[connection signal="pressed" from="MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
